# auto-vpa

./: .gitignore  Dockerfile  README.md  setup.cfg
auto_vpa/: config.py  main.py
