[metadata]
name = auto-vpa
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/auto-vpa


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    configomatic[yaml]
    easykube
    kopf
    pydantic
